# asipf1

./: .gitignore  README.md  pyproject.toml  setup.cfg
asipf1/: AsipF1.ipynb  Pitstops.ipynb  __init__.py  constants.py  gap_dnf.py  gap_percentage_dnf_relation.py  offtrack_fastf1.py  optimal_pitstop.py  utils.py
asipf1/core/: __init__.py  constants.py  utils.py
asipf1/ergast/: __init__.py  db.py
data/: gaps_and_incidents_no_first.csv
