[tool.poetry]
name = "asipf1"
version = "0.1.0"
description = "Formula 1 Stats Analysis"
authors = ["Ivan Jandrić <ijandric97@gmail.com>"]
readme = "README.md"
packages = [{ include = "asip_f1" }]

[tool.poetry.dependencies]
python = "^3.10"
fastf1 = "^2.3.0"
seaborn = "^0.12.2"
plotly = "^5.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
mypy = "^0.991"
jupyter = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line_length = 88

[tool.mypy]
# plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv/|env/"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
